Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,11 @@ stages:
     steps:
     - checkout: self
       submodules: true
+    - task: CopyFiles@2
+      inputs:
+        Contents: 'Nuget.config'
+        TargetFolder: 'src/Miki'
+        OverWrite: true
     - task: Docker@2
       displayName: Build an image
       inputs:
