--- a/src/Miki/Miki.csproj
+++ b/src/Miki/Miki.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <Configurations>Debug;Release;Debug Production;Prod</Configurations>
 	  <Deterministic>False</Deterministic>
 	  <Version>2019.2</Version>
@@ -22,41 +22,42 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DogStatsD-CSharp-Client" Version="4.0.1" />
+    <PackageReference Include="DogStatsD-CSharp-Client" Version="5.0.2" />
     <PackageReference Include="Imgur.API" Version="4.0.1" />
     <PackageReference Include="Lavalink.NET" Version="3.0.3" />
     <PackageReference Include="Lindhart.Analyser.MissingAwaitWarning" Version="1.2.0" />
 
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.6">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
 
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.8" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
     <PackageReference Include="Miki.Anilist" Version="0.6.3" />
     <PackageReference Include="Miki.Cache.InMemory" Version="1.5.0" />
     <PackageReference Include="Miki.Cache.StackExchange.Redis" Version="2.5.0" />
     <PackageReference Include="Miki.Configuration" Version="1.0.0" />
     <PackageReference Include="Miki.Configuration.Providers.Json" Version="1.0.1" />
-    <PackageReference Include="Miki.Discord" Version="3.3.0" />
-    <PackageReference Include="Miki.Discord.Gateway" Version="3.3.11" />
-    <PackageReference Include="Miki.Discord.Rest" Version="3.3.0" />
+    <PackageReference Include="Miki.Discord" Version="4.0.0-rc.4" />
+    <PackageReference Include="Miki.Discord.Extensions" Version="4.0.0-rc.3" />
+    <PackageReference Include="Miki.Discord.Gateway" Version="4.0.0-rc.3" />
+    <PackageReference Include="Miki.Discord.Rest" Version="4.0.0-rc.3" />
     <PackageReference Include="Miki.Dsl" Version="1.2.0" />
-    <PackageReference Include="Miki.Framework" Version="2.3.3.1" />
-    <PackageReference Include="Miki.Framework.Arguments" Version="2.3.2" />
-    <PackageReference Include="Miki.Framework.Commands" Version="2.3.1.1" />
-    <PackageReference Include="Miki.Framework.Commands.Filters" Version="2.3.1" />
-    <PackageReference Include="Miki.Functional" Version="0.1.3" />
-    <PackageReference Include="Miki.Functional.Async" Version="0.0.1" />
+    <PackageReference Include="Miki.Framework" Version="2.5.0-rc.1" />
+    <PackageReference Include="Miki.Framework.Arguments" Version="2.5.0-rc.1" />
+    <PackageReference Include="Miki.Framework.Commands" Version="2.5.0-rc.1" />
+    <PackageReference Include="Miki.Framework.Commands.Filters" Version="2.5.0-rc.1" />
+    <PackageReference Include="Miki.Functional" Version="4.0.0" />
+    <PackageReference Include="Miki.Functional.Async" Version="4.0.0" />
     <PackageReference Include="Miki.Serialization.Protobuf" Version="1.0.4" />
     <PackageReference Include="Miki.UrbanDictionary" Version="0.2.0" />
     <PackageReference Include="MiScript.Compiler" Version="4.0.1-pre.20200708.4" />
     <PackageReference Include="MiScript.Runtime" Version="4.0.1-pre.20200708.4" />
     <PackageReference Include="NCalc.NetCore" Version="1.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="Npgsql" Version="4.1.3.1" />
+    <PackageReference Include="Npgsql" Version="4.1.4" />
     <PackageReference Include="Sentry" Version="2.1.4" />
-    <PackageReference Include="Splitio-net-core" Version="6.0.3" />
+    <PackageReference Include="Splitio-net-core" Version="6.1.3" />
     <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
     <PackageReference Include="Veld.Osu" Version="0.1.4" />
   </ItemGroup>
